# pveboad

./: .gitignore  CLAUDE.md  PLAN.md  README.md  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/auth/: dependencies.py  security.py  session.py
backend/app/core/: config.py  crypto.py  errors.py
backend/app/db/: session.py
backend/app/models/: permission.py  pve_node.py  session.py  user.py
backend/app/pve/: client.py
backend/app/schemas/: auth.py  health.py  kvm.py  node.py  permission.py  user_admin.py  vnc.py
backend/app/services/: auth_service.py  kvm_service.py  node_service.py  node_validation.py  permission_service.py  user_admin_service.py  vnc_service.py
backend/tests/: test_auth_dependencies.py  test_auth_routes.py  test_auth_service.py  test_auth_service_errors.py  test_config.py  test_crypto.py  test_error_handler.py  test_kvm_service.py  test_kvm_service_errors.py  test_node_service.py  test_node_validation.py  test_permission_service.py  test_pve_client_errors.py  test_routes_admin.py  test_user_admin_errors.py  test_user_admin_service.py  test_vnc_service.py
docs/: deployment.md  pve-api-baseline.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: app-shell.tsx  app.tsx  kvm-detail-route.test.tsx  kvm-detail-route.tsx  route-guards.test.tsx  route-guards.tsx  use-admin-state.test.ts  use-admin-state.ts  use-app-state.ts  use-auth-state.test.ts  (+3 more)
infra/: README.md
(+20 files in other folders)
